feat: implement cookie-based JWT authentication and fix payment flow issues